# cartola-specialist-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
analyzer/: __init__.py  analyzer.py  checklist.py  models.py  scouts.py
examples/: rodada_38_2025.py
